--- a/registrar.html
+++ b/registrar.html
@@ -6,7 +6,7 @@
 	<script type="text/javascript" src="js/registrar.js"></script>
 </head>
 <body>
-
+<h1>MIN TIC UPB - SESION GIT</h1>
 <fieldset>
 	<legend>Registrar</legend>
 	<form action="" method="get" >
